Fixing alignment issue and respecting max limit

--- a/sugarcrm/themes/Sugar/css/style.css
+++ b/sugarcrm/themes/Sugar/css/style.css
@@ -6063,7 +6063,7 @@ text-align: right;
 	text-decoration: none;
 }
 
- #sugar_full_search_results section .resultTitle, #sugar_full_search_results section ul { 
+#sugar_full_search_results section ul {
  	width: auto;
  }
  
